--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "csci432-web",
-  "version": "1.0.0",
-  "description": "For CSCI432 Web Programming",
-  "main": "index.js",
+  "name": "realm",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"vite dev"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "vite": "^5.4.1"
+  }
 }
