--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite\" \"nodemon server/server.js\"",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "nodemon": "^3.1.7",
     "vite": "^5.4.1"
   },
   "dependencies": {
-    "concurrently": "^9.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
-  },
-  "dependencies": {
     "sqlite3": "^5.1.7"
   }
 }
