--- a/package.json
+++ b/package.json
@@ -12,12 +12,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
-    "concurrently": "^9.1.0",
-    "cors": "^2.8.5",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
-  },
-  "dependencies": {
-    "sqlite3": "^5.1.7"
+    "mongodb": "^6.10.0"
   }
 }
