--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
   },
   "dependencies": {
     "express": "^4.21.1",
-    "mongodb": "^6.10.0"
+    "mongodb": "^6.10.0",
     "cors": "^2.8.5",
     "concurrently": "^9.1.0",
-    "vite": "^5.4.1"
-  },
-  "dependencies": {
+    "vite": "^5.4.1",
     "sqlite3": "^5.1.7"
   }
 }
