--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "concurrently": "^9.1.0",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
-    "cors": "^2.8.5",
-    "concurrently": "^9.1.0",
-    "vite": "^5.4.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "vite": "^5.4.1"
   }
 }
